ajustes teste unitário